[package]
name = "ls_plus"
version = "0.2.1"
edition = "2024"
description = "A modern replacement for ls command with rich features and beautiful output"
authors = ["blkcor <blkcor.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/blkcor/bls"
documentation = "https://docs.rs/ls_plus"
readme = "README.md"
keywords = ["cli", "ls", "file", "utility", "terminal"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["/.github", "/.gitignore", "/tests", "/.vscode"]

[[bin]]
name = "ls_plus"
path = "src/main.rs"

[lib]
name = "ls_plus"
path = "src/lib.rs"

[dependencies]
# crate for parsing command line arguments
clap = { version = "4.5.40", features = ["derive"] }
# crate for colored output
owo-colors = "4.2.2"
termcolor = "1.4.1"
# crate for file system operations
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
# crate for pretty printing table for rust structs and enums
tabled = "0.20.0"
# crate for parse time
chrono = "0.4.41"
# crate for json serialization and deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# crate for glob pattern matching
glob = "0.3.1"
# crate for user and group information
users = "0.11.0"

[dev-dependencies]
# crate for testing
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"

[profile.release]
# Enable link-time optimization
lto = true
# Enable optimization for size
opt-level = "s"
# Strip debug symbols
strip = true
# Enable codegen units for better optimization
codegen-units = 1
